--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -172,7 +172,7 @@ footer {
 
 .login,
 .register {
-  z-index: 5;
+  z-index: 10;
   position: fixed;
   width: 310px;
   top: 80px;
@@ -257,7 +257,7 @@ footer {
   right: 0;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.25);
-  z-index: 2;
+  z-index: 9;
 }
 
 .transparent_overlay {
